"Found method for work experience alignment and fixed open issue"

--- a/portfolio/src/components/header.css
+++ b/portfolio/src/components/header.css
@@ -33,7 +33,8 @@
 }
 
 .wrapper.open {
-  animation: height 0.4s ease forwards; /* Adjust the duration as needed */
+  display: flex;
+  animation: height 0.4s ease forwards;
 }
 
 .name_navbar {
@@ -181,4 +182,18 @@
   color: white;
   padding-left: 5px;
   padding-right: 5px;
+  justify-self: start; /* Align to the start of the grid area */
+}
+
+/* Work navbar after 550px width, and after toggle is clicked */
+
+.work_navbar_hamburger.open {
+  position: relative;
+  font-size: 97%;
+  top: 20%;
+  left: -4.4%;
+  color: white;
+  padding-left: 5px;
+  padding-right: 5px;
+  justify-self: start; /* Align to the start of the grid area */
 }
